# SPDX-License-Identifier: MIT
cc_test(
    name = "black_scholes_analytics_test",
    size = "small",
    srcs = ["black_scholes_analytics_test.cc"],
    deps = [
        "//src/math:black_scholes_analytics",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "parallel_critical_test",
    size = "small",
    srcs = ["parallel_critical_test.cc"],
    deps = [
        "//src/support:parallel",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "lifetime_test",
    size = "small",
    srcs = ["lifetime_test.cc"],
    deps = [
        "//src/support:lifetime",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "thread_workspace_test",
    size = "small",
    srcs = ["thread_workspace_test.cc"],
    deps = [
        "//src/support:thread_workspace",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "bspline_collocation_workspace_test",
    size = "small",
    srcs = ["bspline_collocation_workspace_test.cc"],
    deps = [
        "//src/math:bspline_collocation_workspace",
        "//src/support:thread_workspace",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "bspline_fit_with_workspace_test",
    size = "small",
    srcs = ["bspline_fit_with_workspace_test.cc"],
    deps = [
        "//src/math:bspline_collocation",
        "//src/math:bspline_collocation_workspace",
        "//src/support:thread_workspace",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "bspline_nd_workspace_integration_test",
    size = "small",
    srcs = ["bspline_nd_workspace_integration_test.cc"],
    deps = [
        "//src/math:bspline_nd_separable",
        "//src/support:thread_workspace",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
)

cc_test(
    name = "aligned_allocator_test",
    size = "small",
    srcs = ["aligned_allocator_test.cc"],
    deps = [
        "//src/support:aligned_allocator",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "yield_curve_test",
    size = "small",
    srcs = ["yield_curve_test.cc"],
    deps = [
        "//src/math:yield_curve",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "rate_spec_test",
    size = "small",
    srcs = ["rate_spec_test.cc"],
    deps = [
        "//src/option:option_spec",
        "//src/math:yield_curve",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "black_scholes_pde_rate_fn_test",
    size = "small",
    srcs = ["black_scholes_pde_rate_fn_test.cc"],
    deps = [
        "//src/pde/operators:black_scholes_pde",
        "//src/math:yield_curve",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "safe_math_test",
    size = "small",
    srcs = ["safe_math_test.cc"],
    deps = [
        "//src/math:safe_math",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_axes_test",
    size = "small",
    srcs = ["price_table_axes_test.cc"],
    deps = [
        "//src/option/table/bspline:bspline_surface",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_tensor_test",
    size = "small",
    srcs = ["price_tensor_test.cc"],
    deps = [
        "//src/option/table/bspline:bspline_builder",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_surface_test",
    size = "small",
    srcs = ["price_table_surface_test.cc"],
    deps = [
        "//src/math:bspline_nd",
        "//src/math:bspline_basis",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)


cc_test(
    name = "price_table_config_test",
    size = "small",
    srcs = ["price_table_config_test.cc"],
    deps = [
        "//src/option/table/bspline:bspline_builder",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "european_option_test",
    size = "small",
    srcs = ["european_option_test.cc"],
    deps = [
        "//src/option:european_option",
        "//src/option:option_concepts",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "option_concepts_test",
    size = "small",
    srcs = ["option_concepts_test.cc"],
    deps = [
        "//src/option:option_concepts",
        "//src/option:american_option_result",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_grid_estimator_test",
    size = "small",
    srcs = ["price_table_grid_estimator_test.cc"],
    deps = [
        "//src/option/table/bspline:bspline_builder",
        "//src/option:american_option",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_builder_test",
    size = "small",
    srcs = ["price_table_builder_test.cc", "price_table_builder_test_access.hpp"],
    deps = [
        "//src/option/table/bspline:bspline_builder",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_builder_custom_grid_test",
    size = "small",
    srcs = ["price_table_builder_custom_grid_test.cc", "price_table_builder_test_access.hpp"],
    deps = [
        "//src/option/table/bspline:bspline_builder",
        "//src/pde/core:time_domain",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_builder_custom_grid_advanced_test",
    size = "small",
    srcs = ["price_table_builder_custom_grid_advanced_test.cc", "price_table_builder_test_access.hpp"],
    deps = [
        "//src/option/table/bspline:bspline_builder",
        "//src/pde/core:time_domain",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_builder_custom_grid_diagnosis_test",
    size = "small",
    srcs = ["price_table_builder_custom_grid_diagnosis_test.cc", "price_table_builder_test_access.hpp"],
    deps = [
        "//src/option/table/bspline:bspline_builder",
        "//src/pde/core:time_domain",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_builder_root_cause_test",
    size = "small",
    srcs = ["price_table_builder_root_cause_test.cc", "price_table_builder_test_access.hpp"],
    deps = [
        "//src/option/table/bspline:bspline_builder",
        "//src/pde/core:time_domain",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "bspline_fitting_stats_test",
    size = "small",
    srcs = ["bspline_fitting_stats_test.cc"],
    deps = [
        "//src/math:bspline_nd_separable",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_result_test",
    size = "small",
    srcs = ["price_table_result_test.cc"],
    deps = [
        "//src/option/table/bspline:bspline_builder",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_builder_result_test",
    size = "small",
    srcs = ["price_table_builder_result_test.cc"],
    deps = [
        "//src/option/table/bspline:bspline_builder",
        "//src/option/table/bspline:bspline_surface",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_builder_grid_test",
    size = "small",
    srcs = ["price_table_builder_grid_test.cc"],
    deps = [
        "//src/option/table/bspline:bspline_builder",
        "//src/option/table/bspline:bspline_surface",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_builder_factories_test",
    size = "small",
    srcs = ["price_table_builder_factories_test.cc"],
    deps = [
        "//src/option/table/bspline:bspline_builder",
        "//src/option:option_grid",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "recursion_helpers_test",
    size = "small",
    srcs = ["recursion_helpers_test.cc"],
    deps = [
        "//src/option/table/bspline:bspline_builder",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "grid_test",
    srcs = ["grid_test.cc"],
    deps = [
        "//src/pde/core:grid",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "grid_expected_test",
    srcs = ["grid_expected_test.cc"],
    deps = [
        "//src/pde/core:grid",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "grid_with_solution_test",
    srcs = ["grid_with_solution_test.cc"],
    deps = [
        "//src/pde/core:grid",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "grid_snapshot_test",
    srcs = ["grid_snapshot_test.cc"],
    deps = [
        "//src/pde/core:grid",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "pde_workspace_test",
    srcs = ["pde_workspace_test.cc"],
    deps = [
        "//src/pde/core:pde_workspace",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "american_pde_workspace_test",
    size = "small",
    srcs = ["american_pde_workspace_test.cc"],
    deps = [
        "//src/pde/core:american_pde_workspace",
        "//src/support:thread_workspace",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "boundary_conditions_test",
    srcs = ["boundary_conditions_test.cc"],
    deps = [
        "//src/pde/core:boundary_conditions",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "root_finding_test",
    srcs = ["root_finding_test.cc"],
    deps = [
        "//src/math:root_finding",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "brent_cpp_test",
    srcs = ["brent_cpp_test.cc"],
    deps = [
        "//src/math:root_finding",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "pde_solver_test",
    srcs = ["pde_solver_test.cc"],
    deps = [
        "//src/pde/core:pde_solver",
        "//src/pde/core:pde_workspace",
        "//src/pde/core:grid",
        "//src/pde/core:boundary_conditions",
        "//src/pde/operators:operator_factory",
        "//src/pde/operators:laplacian_pde",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
        "-fopenmp-simd",
    ],
)

cc_test(
    name = "pde_solver_snapshot_test",
    srcs = ["pde_solver_snapshot_test.cc"],
    deps = [
        "//src/pde/core:pde_solver",
        "//src/pde/core:pde_workspace",
        "//src/pde/core:grid",
        "//src/pde/core:boundary_conditions",
        "//src/pde/operators:operator_factory",
        "//src/pde/operators:laplacian_pde",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
        "-fopenmp-simd",
    ],
)

cc_test(
    name = "time_domain_test",
    srcs = ["time_domain_test.cc"],
    deps = [
        "//src/pde/core:time_domain",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "trbdf2_config_test",
    srcs = ["trbdf2_config_test.cc"],
    deps = [
        "//src/pde/core:trbdf2_config",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "tridiagonal_solver_test",
    srcs = ["tridiagonal_solver_test.cc"],
    deps = [
        "//src/math:thomas_solver",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)


cc_test(
    name = "iv_solver_test",
    srcs = ["iv_solver_test.cc"],
    deps = [
        "//src/option:iv_solver",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "iv_solver_expected_test",
    srcs = ["iv_solver_expected_test.cc"],
    deps = [
        "//src/option:iv_solver",
        "//src/option:iv_result",
        "//src/support:error_types",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

# DISABLED: Test crashes in CI due to apparent cache/build incompatibility
# Works fine locally but fails immediately when run against cached deps in CI.
# TODO: Investigate root cause - may need to invalidate CI cache.
# cc_test(
#     name = "iv_solver_property_test",
#     size = "small",
#     srcs = ["iv_solver_property_test.cc"],
#     deps = [
#         "//src/option:iv_solver",
#         "@googletest//:gtest",
#         "@googletest//:gtest_main",
#     ],
# )

# DISABLED: Pre-existing failure (solution[25] == 0 instead of 2.0)
# cc_test(
#     name = "temporal_event_test",
#     size = "small",
#     srcs = ["temporal_event_test.cc"],
#     deps = [
#         "//src/pde/core:pde_solver",
#         "//src/pde/core:pde_workspace",
#         "//src/pde/core:grid",
#         "//src/pde/operators:laplacian_pde",
#         "//src/pde/operators:operator_factory",
#         "//src/pde/core:boundary_conditions",
#         "@googletest//:gtest_main",
#     ],
#     copts = ["-std=c++23", "-fopenmp-simd"],
# )

cc_test(
    name = "obstacle_test",
    size = "small",
    srcs = ["obstacle_test.cc"],
    deps = [
        "//src/pde/core:pde_solver",
        "//src/pde/core:grid",
        "//src/pde/core:pde_workspace",
        "//src/pde/operators:laplacian_pde",
        "//src/pde/operators:operator_factory",
        "//src/pde/core:boundary_conditions",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-fopenmp-simd",
    ],
)

cc_test(
    name = "grid_spacing_test",
    srcs = ["grid_spacing_test.cc"],
    deps = [
        "//src/pde/core:grid",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "grid_spacing_data_test",
    srcs = ["grid_spacing_data_test.cc"],
    deps = [
        "//src/pde/core:grid",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "grid_spacing_mdspan_test",
    srcs = ["grid_spacing_mdspan_test.cc"],
    deps = [
        "//src/pde/core:grid",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "american_option_solver_test",
    size = "small",
    srcs = ["american_option_solver_test.cc"],
    deps = [
        "//src/option:american_option",
        "//src/option:american_option_batch",
        "@googletest//:gtest_main",
    ],
    tags = ["manual"],  # Disabled: validation expectations changed with new API
)

cc_test(
    name = "american_option_gamma_oscillation_test",
    size = "small",
    srcs = ["american_option_gamma_oscillation_test.cc"],
    deps = [
        "//src/option:american_option",
        "//src/pde/operators:centered_difference",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "american_option_test",
    size = "small",
    srcs = ["american_option_test.cc"],
    deps = [
        "//src/option:american_option",
        "//src/option:american_option_batch",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "american_option_result_test",
    size = "small",
    srcs = ["american_option_result_test.cc"],
    deps = [
        "//src/option:american_option_result",
        "//src/pde/core:grid",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "real_market_data_test",
    srcs = ["real_market_data_test.cc"],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    deps = [
        "//benchmarks:real_market_data",
        "//src/option:american_option",
        "//src/option:american_option_batch",
        "//src/option:iv_solver",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "thomas_cubic_spline_test",
    srcs = ["thomas_cubic_spline_test.cc"],
    deps = [
        "//src/math:thomas_solver",
        "//src/math:cubic_spline_solver",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "cubic_spline_2d_test",
    srcs = ["cubic_spline_2d_test.cc"],
    deps = [
        "//src/math:cubic_spline_solver",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "bspline_collocation_1d_test",
    srcs = ["bspline_collocation_1d_test.cc"],
    deps = [
        "//src/math:bspline_collocation",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "bspline_fitter_4d_separable_test",
    srcs = ["bspline_fitter_4d_separable_test.cc"],
    deps = [
        "//src/math:bspline_nd_separable",
        "//src/support:thread_workspace",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-fopenmp",
    ],
    linkopts = ["-fopenmp"],
)

cc_test(
    name = "centered_difference_test",
    srcs = ["centered_difference_facade_test.cc"],
    deps = [
        "//src/pde/operators:centered_difference",
        "//src/pde/core:grid",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "spatial_operator_jacobian_test",
    srcs = ["spatial_operator_jacobian_test.cc"],
    deps = [
        "//src/pde/operators:spatial_operator",
        "//src/pde/operators:black_scholes_pde",
        "//src/pde/operators:operator_factory",
        "//src/pde/core:grid",
        "//src/pde/core:pde_workspace",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "target_clones_test",
    srcs = ["operators/target_clones_test.cc"],
    deps = [
        "//src/pde/operators:centered_difference",
        "//src/pde/core:grid",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-fopenmp-simd",
    ],
)

# Test suites defined for convenience
# Fast tests: bazel test //tests/... --test_tag_filters=-manual,-slow
# Slow tests: bazel test //tests/... --test_tag_filters=slow


# DISABLED: Failing tests (needs investigation)
# cc_test(
#     name = "price_table_4d_integration_test",
#     srcs = ["price_table_4d_integration_test.cc"],
#     deps = [
#         "//src/option/table/bspline:bspline_builder",
#         "//src/option/table/bspline:bspline_surface",
#         "@googletest//:gtest_main",
#     ],
#     copts = ["-std=c++23"],
# )

# DISABLED: Failing tests (needs investigation)
# cc_test(
#     name = "price_table_end_to_end_performance_test",
#     srcs = ["price_table_end_to_end_performance_test.cc"],
#     deps = [
#         "//src/option/table/bspline:bspline_builder",
#         "@googletest//:gtest_main",
#     ],
#     copts = ["-std=c++23"],
#     size = "large",
#     timeout = "moderate",
# )

cc_test(
    name = "crc64_test",
    srcs = ["crc64_test.cc"],
    deps = [
        "//src/support:crc64",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "bspline_banded_solver_test",
    srcs = ["bspline_banded_solver_test.cc"],
    deps = [
        "//src/math:bspline_nd_separable",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-fopenmp",
    ],
    linkopts = ["-fopenmp"], 
)

cc_test(
    name = "bspline_workspace_test",
    srcs = ["bspline_workspace_test.cc"],
    deps = [
        "//src/math:bspline_nd_separable",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-fopenmp",
    ],
    linkopts = ["-fopenmp"], 
    size = "small",
)

cc_test(
    name = "bspline_condition_number_stress_test",
    srcs = ["bspline_condition_number_stress_test.cc"],
    deps = [
        "//src/math:bspline_nd_separable",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-fopenmp",
    ],
    linkopts = ["-fopenmp"], 
    size = "medium",
    timeout = "moderate",
)

cc_test(
    name = "quantlib_accuracy_test",
    srcs = ["quantlib_accuracy_test.cc"],
    deps = [
        "//src/option:american_option",
        "//src/option:iv_solver",
        "@googletest//:gtest_main",
    ],
    linkopts = ["-lQuantLib"],
    size = "medium",
    timeout = "moderate",
    tags = ["manual"],  # Disabled: Greeks accuracy needs improvement for non-uniform grids
)

cc_test(
    name = "quantlib_accuracy_batch_test",
    srcs = [
        "quantlib_accuracy_batch_test.cc",
        "quantlib_validation_framework.hpp",
    ],
    deps = [
        "//src/option:american_option",
        "//src/option:iv_solver",
        "//src/option:interpolated_iv_solver",
        "//src/option/table/bspline:bspline_builder",
        "//src/option/table/bspline:bspline_surface",
        "//src/option/table/bspline:bspline_tensor_accessor",
        "@googletest//:gtest_main",
    ],
    linkopts = ["-lQuantLib"],
    size = "large",
    timeout = "long",
    tags = ["manual"],  # Manual due to long build time for price table
)

cc_test(
    name = "american_option_new_api_test",
    size = "small",
    srcs = ["american_option_new_api_test.cc"],
    deps = [
        "//src/option:american_option",
        "//src/option:american_option_result",
        "//src/pde/core:pde_workspace",
        "//src/pde/core:grid",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "bspline_nd_test",
    size = "small",
    srcs = ["bspline_nd_test.cc"],
    deps = [
        "//src/math:bspline_nd",
        "//src/math:bspline_basis",
        "//src/math:bspline_nd_separable",
        "//src/option/table:surface_concepts",
        "//src/option/table/bspline:bspline_surface",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "bspline_nd_mdspan_test",
    size = "small",
    srcs = ["bspline_nd_mdspan_test.cc"],
    deps = [
        "//src/math:bspline_nd",
        "//src/math:bspline_basis",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "american_option_batch_test",
    size = "small",
    srcs = ["american_option_batch_test.cc"],
    deps = [
        "//src/option:american_option_batch",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "american_option_batch_workspace_test",
    size = "small",
    srcs = ["american_option_batch_workspace_test.cc"],
    deps = [
        "//src/option:american_option_batch",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "batch_solver_custom_grid_test",
    size = "small",
    srcs = ["batch_solver_custom_grid_test.cc"],
    deps = [
        "//src/option:american_option_batch",
        "//src/pde/core:grid",
        "//src/pde/core:time_domain",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "mdspan_integration_test",
    srcs = ["mdspan_integration_test.cc"],
    deps = [
        "@mdspan//:mdspan",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "lapack_banded_layout_test",
    srcs = ["lapack_banded_layout_test.cc"],
    deps = [
        "//src/math:lapack_banded_layout",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "mdspan_integration_e2e_test",
    srcs = ["mdspan_integration_e2e_test.cc"],
    deps = [
        "//src/math:banded_matrix_solver",
        "//src/math:bspline_nd",
        "//src/pde/core:grid",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "normalized_solver_regression_test",
    size = "small",
    srcs = ["normalized_solver_regression_test.cc"],
    deps = [
        "//src/option:american_option_batch",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "normalized_chain_accuracy_test",
    srcs = [
        "normalized_chain_accuracy_test.cc",
        "quantlib_validation_framework.hpp",
    ],
    deps = [
        "//src/option:american_option",
        "//src/option:american_option_batch",
        "//src/option:iv_solver",
        "//src/option:interpolated_iv_solver",
        "@googletest//:gtest_main",
    ],
    linkopts = ["-lQuantLib"],
    size = "large",
    timeout = "long",
)

cc_test(
    name = "iv_error_types_test",
    srcs = ["iv_error_types_test.cc"],
    deps = [
        "//src/support:error_types",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "interpolation_error_test",
    srcs = ["interpolation_error_test.cc"],
    deps = [
        "//src/support:error_types",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "iv_result_test",
    srcs = ["iv_result_test.cc"],
    deps = [
        "//src/option:iv_result",
        "//src/support:error_types",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "iv_solver_integration_test",
    srcs = ["iv_solver_integration_test.cc"],
    deps = [
        "//src/option:iv_solver",
        "//src/option:iv_result",
        "//src/support:error_types",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "option_grid_test",
    srcs = ["option_grid_test.cc"],
    deps = [
        "//src/option:option_grid",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "interpolated_iv_solver_test",
    size = "medium",
    srcs = ["interpolated_iv_solver_test.cc"],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    deps = [
        "//src/option:interpolated_iv_solver",
        "//src/option/table/bspline:bspline_builder",
        "//src/option/table/bspline:bspline_surface",
        "//src/option/table/bspline:bspline_tensor_accessor",
        "//src/math:bspline_nd",
        "//src/math:bspline_basis",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "batch_bracketing_test",
    size = "small",
    srcs = ["batch_bracketing_test.cc"],
    deps = [
        "//src/option:batch_bracketing",
        "@googletest//:gtest_main",
    ],
    copts = [
        "-Wall",
        "-Wextra",
    ],
)

cc_test(
    name = "simple_price_test",
    srcs = ["simple_price_test.cc"],
    deps = [
        "//src/simple:price",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "simple_timestamp_test",
    srcs = ["simple_timestamp_test.cc"],
    deps = [
        "//src/simple:timestamp",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "simple_option_types_test",
    srcs = ["simple_option_types_test.cc"],
    deps = [
        "//src/simple:option_types",
        "@googletest//:gtest_main",
    ],
)


cc_test(
    name = "simple_converter_test",
    srcs = ["simple_converter_test.cc"],
    deps = [
        "//src/simple:converter",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "simple_chain_builder_test",
    srcs = ["simple_chain_builder_test.cc"],
    deps = [
        "//src/simple:chain_builder",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "simple_vol_surface_test",
    srcs = ["simple_vol_surface_test.cc"],
    deps = [
        "//src/simple:vol_surface",
        "//src/simple:chain_builder",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "latin_hypercube_test",
    size = "small",
    srcs = ["latin_hypercube_test.cc"],
    deps = [
        "//src/math:latin_hypercube",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "error_attribution_test",
    size = "small",
    srcs = ["error_attribution_test.cc"],
    deps = [
        "//src/option/table:adaptive_refinement",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "bspline_pde_cache_test",
    size = "small",
    srcs = ["bspline_pde_cache_test.cc"],
    deps = [
        "//src/option/table/bspline:bspline_pde_cache",
        "//src/option:american_option_result",
        "//src/pde/core:grid",
        "//src/pde/core:time_domain",
        "//src/option:option_spec",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "adaptive_grid_types_test",
    size = "small",
    srcs = ["adaptive_grid_types_test.cc"],
    deps = [
        "//src/option/table:adaptive_grid_types",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "adaptive_grid_builder_test",
    size = "large",
    timeout = "long",
    srcs = ["adaptive_grid_builder_test.cc"],
    deps = [
        "//src/option/table:adaptive_grid_types",
        "//src/option/table:adaptive_refinement",
        "//src/option/table:tau_segment_split",
        "//src/option/table/bspline:bspline_adaptive",
        "//src/option/table/bspline:bspline_pde_cache",
        "//src/option/table/bspline:bspline_surface",
        "//src/option/table/chebyshev:chebyshev_adaptive",
        "//src/option/table/chebyshev:chebyshev_surface",
        "//src/math/chebyshev:chebyshev_nodes",
        "//src/option:american_option_batch",
        "//src/option:option_grid",
        "//src/pde/core:grid",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "adaptive_grid_builder_integration_test",
    size = "medium",
    timeout = "moderate",
    srcs = ["adaptive_grid_builder_integration_test.cc"],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    deps = [
        "//src/option/table/bspline:bspline_adaptive",
        "//src/option:option_grid",
        "//src/pde/core:grid",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "production_config_integration_test",
    size = "medium",
    timeout = "moderate",
    srcs = ["production_config_integration_test.cc"],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    deps = [
        "//src/option/table/bspline:bspline_builder",
        "//src/option/table/bspline:bspline_surface",
        "//src/option/table/bspline:bspline_tensor_accessor",
        "//src/option:american_option_batch",
        "//src/option:interpolated_iv_solver",
        "//src/pde/core:grid",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

# FuzzTest requires Earthly container with Clang + libc++ due to C++23 ABI issues:
# - GCC 14: FuzzTest dependencies have -Werror failures
# - Clang + libstdc++: std::span ODR violations
# - Clang + libc++: Works but incompatible with pybind11 (Python bindings)
#
# Run via: earthly +fuzz-test
# Or manually in a libc++ environment: bazel test --config=fuzz //tests:batch_solver_fuzz_test
cc_test(
    name = "batch_solver_fuzz_test",
    size = "medium",
    timeout = "moderate",
    srcs = ["batch_solver_fuzz_test.cc"],
    # No OpenMP flags - libomp not available in Earthly container
    tags = [
        "manual",  # Don't run with bazel test //... (requires Earthly)
    ],
    deps = [
        "//src/option:american_option_batch",
        "//src/pde/core:grid",
        "@fuzztest//fuzztest",
        "@fuzztest//fuzztest:fuzztest_gtest_main",
    ],
)

cc_test(
    name = "custom_grid_example_test",
    size = "small",
    srcs = ["custom_grid_example_test.cc"],
    deps = [
        "//src/option:american_option",
        "//src/pde/core:grid",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "multi_sinh_grid_example_test",
    size = "small",
    srcs = ["multi_sinh_grid_example_test.cc"],
    deps = [
        "//src/pde/core:grid",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "simple_yfinance_test",
    size = "small",
    srcs = ["simple_yfinance_test.cc"],
    deps = [
        "//src/simple",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "simple_databento_test",
    size = "small",
    srcs = ["simple_databento_test.cc"],
    deps = [
        "//src/simple",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "eep_integration_test",
    size = "medium",
    srcs = ["eep_integration_test.cc"],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    deps = [
        "//src/option/table/bspline:bspline_builder",
        "//src/option/table/bspline:bspline_surface",
        "//src/option/table/bspline:bspline_tensor_accessor",
        "//src/option:american_option",
        "//src/pde/core:pde_workspace",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "segmented_price_surface_test",
    size = "medium",
    timeout = "moderate",
    srcs = ["segmented_price_surface_test.cc"],
    deps = [
        "//src/option/table/bspline:bspline_segmented_builder",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "discrete_dividend_event_test",
    size = "medium",
    srcs = ["discrete_dividend_event_test.cc"],
    deps = [
        "//src/option:american_option",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "segmented_price_table_builder_test",
    size = "medium",
    srcs = ["segmented_price_table_builder_test.cc"],
    deps = [
        "//src/option/table/bspline:bspline_segmented_builder",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "price_table_builder_raw_price_test",
    size = "small",
    srcs = ["price_table_builder_raw_price_test.cc"],
    deps = [
        "//src/option/table/bspline:bspline_builder",
        "//src/option/table/bspline:bspline_tensor_accessor",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "iv_solver_factory_test",
    size = "large",
    timeout = "long",
    srcs = ["iv_solver_factory_test.cc"],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    deps = [
        "//src/option:interpolated_iv_solver",
        "//src/option:american_option",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "discrete_dividend_iv_integration_test",
    size = "medium",
    srcs = ["discrete_dividend_iv_integration_test.cc"],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    deps = [
        "//src/option:interpolated_iv_solver",
        "//src/option:american_option",
        "//src/option:american_option_batch",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "discrete_dividend_accuracy_test",
    size = "medium",
    timeout = "moderate",
    srcs = ["discrete_dividend_accuracy_test.cc"],
    deps = [
        "//src/option:american_option",
        "//src/option:american_option_batch",
        "//src/pde/core:pde_workspace",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
    linkopts = ["-lQuantLib"],
)

load("@pip//:requirements.bzl", "requirement")

cc_test(
    name = "option_spec_test",
    size = "small",
    srcs = ["option_spec_test.cc"],
    deps = [
        "//src/option:option_spec",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "error_types_test",
    size = "small",
    srcs = ["error_types_test.cc"],
    deps = [
        "//src/support:error_types",
        "@googletest//:gtest_main",
    ],
)

py_test(
    name = "python_bindings_test",
    size = "medium",
    srcs = ["test_bindings.py"],
    main = "test_bindings.py",
    data = ["//src/python:mango_option"],
    imports = ["../src/python"],
    deps = [requirement("numpy")],
)

cc_test(
    name = "surface_concepts_test",
    size = "medium",
    srcs = ["surface_concepts_test.cc"],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    deps = [
        "//src/option/table:surface_concepts",
        "//src/option/table:greek_types",
        "//src/option/table/bspline:bspline_surface",
        "//src/option/table:standard_transform_4d",
        "//src/option/table:dimensionless_transform_3d",
        "//src/option/table:analytical_eep",
        "//src/option/table:price_table",

        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "dimensionless_transform_test",
    size = "small",
    srcs = ["dimensionless_transform_test.cc"],
    deps = [
        "//src/option/table:dimensionless_transform_3d",
        "//src/option/table:greek_types",
        "//src/option/table:surface_concepts",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "chebyshev_nodes_test",
    size = "small",
    srcs = ["chebyshev_nodes_test.cc"],
    deps = [
        "//src/math/chebyshev:chebyshev_nodes",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "chebyshev_interpolant_test",
    size = "small",
    srcs = ["chebyshev_interpolant_test.cc"],
    deps = [
        "//src/math/chebyshev:chebyshev_interpolant",
        "//src/math/chebyshev:chebyshev_nodes",
        "//src/math/chebyshev:raw_tensor",
        "//src/math/chebyshev:tucker_tensor",
        "//src/option/table:surface_concepts",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "split_surface_test",
    size = "small",
    srcs = ["split_surface_test.cc"],
    deps = [
        "//src/option/table:split_surface",
        "//src/option/table:tau_segment_split",
        "//src/option/table:multi_kref_split",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "chebyshev_pde_cache_test",
    size = "small",
    srcs = ["chebyshev_pde_cache_test.cc"],
    deps = [
        "//src/option/table/chebyshev:chebyshev_pde_cache",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "chebyshev_surface_test",
    size = "medium",
    srcs = ["chebyshev_surface_test.cc"],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    deps = [
        "//src/option:american_option",
        "//src/option/table/chebyshev:chebyshev_surface",
        "//src/option/table/chebyshev:chebyshev_table_builder",

        "//src/option/table:surface_concepts",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "surface_3d_concepts_test",
    size = "small",
    srcs = ["surface_3d_concepts_test.cc"],
    deps = [
        "//src/option/table/bspline:bspline_3d_surface",
        "//src/option/table/chebyshev:chebyshev_3d_surface",
        "//src/option/table:surface_concepts",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "dimensionless_european_test",
    size = "small",
    srcs = ["dimensionless_european_test.cc"],
    deps = [
        "//src/option/table/dimensionless:dimensionless_european",
        "//src/option:european_option",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "dimensionless_builder_test",
    size = "medium",
    srcs = ["dimensionless_builder_test.cc"],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    deps = [
        "//src/option/table/dimensionless:dimensionless_builder",
        "//src/option/table/dimensionless:dimensionless_european",
        "//src/option/table/dimensionless:dimensionless_3d_accessor",
        "//src/option/table:analytical_eep",
        "//src/option:american_option",
        "//src/option:european_option",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "dimensionless_3d_surface_test",
    size = "medium",
    srcs = ["dimensionless_3d_surface_test.cc"],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    deps = [
        "//src/option/table/bspline:bspline_3d_surface",
        "//src/option/table/dimensionless:dimensionless_builder",
        "//src/option/table/dimensionless:dimensionless_3d_accessor",
        "//src/option/table:analytical_eep",
        "//src/math:bspline_nd",
        "//src/math:bspline_nd_separable",
        "//src/math:bspline_basis",
        "//src/option:american_option",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "dimensionless_iv_test",
    size = "medium",
    srcs = ["dimensionless_iv_test.cc"],
    deps = [
        "//src/option:interpolated_iv_solver",
        "//src/option:iv_solver",
        "//src/option:american_option",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "dimensionless_adaptive_test",
    size = "large",
    srcs = ["dimensionless_adaptive_test.cc"],
    deps = [
        "//src/option/table/dimensionless:dimensionless_adaptive",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "greek_types_test",
    size = "small",
    srcs = ["greek_types_test.cc"],
    deps = [
        "//src/option/table:greek_types",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "eep_greeks_test",
    size = "small",
    srcs = ["eep_greeks_test.cc"],
    deps = [
        "//src/option/table:analytical_eep",
        "//src/option/table:eep_layer",
        "//src/option/table:surface_concepts",
        "//src/option/table:greek_types",
        "//src/option:european_option",
        "//src/option:option_spec",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "transform_leaf_greeks_test",
    size = "medium",
    srcs = ["transform_leaf_greeks_test.cc"],
    deps = [
        "//src/option/table/bspline:bspline_builder",
        "//src/option/table/bspline:bspline_surface",
        "//src/option/table:greek_types",
        "//src/option:option_spec",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

