# C++ Toolchain for mango-iv
#
# Configures GCC 14+ with C++23 support as the default toolchain.
# Includes features for:
# - C++23 standard (-std=c++23)
# - C11 for C files (-std=c11)
# - Warning flags and -Werror
# - Baseline x86-64 ISA for portable binaries

load(":cc_toolchain_config.bzl", "cc_toolchain_config")

package(default_visibility = ["//visibility:public"])

# Toolchain configuration
cc_toolchain_config(name = "mango_iv_toolchain_config")

# Toolchain definition
cc_toolchain(
    name = "mango_iv_cc_toolchain",
    toolchain_identifier = "mango-iv-toolchain",
    toolchain_config = ":mango_iv_toolchain_config",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 1,
)

# Toolchain rule for registration
toolchain(
    name = "cc_toolchain_for_k8",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    toolchain = ":mango_iv_cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

# Empty filegroup for toolchain files
filegroup(name = "empty")
