# C++ Toolchains for mango-option
#
# Three toolchains are available:
# - GCC 14+ (default): High optimization, used for production
# - Clang 19 + libstdc++: For dependencies requiring Clang (has ABI issues)
# - Clang 19 + libc++: For FuzzTest (requires Earthly container)
#
# All support:
# - C++23 standard (-std=c++23)
# - C11 for C files (-std=c11)
# - Warning flags and -Werror
# - Baseline x86-64 ISA for portable binaries
#
# Usage:
#   bazel build //...                    # Uses GCC (default)
#   bazel build --config=clang //...     # Uses Clang + libstdc++
#   earthly +fuzz-test                   # Uses Clang + libc++ for FuzzTest

load(":cc_toolchain_config.bzl", "cc_toolchain_config")
load(":cc_toolchain_config_clang.bzl", "clang_toolchain_config")
load(":cc_toolchain_config_fuzz.bzl", "fuzz_toolchain_config")

package(default_visibility = ["//visibility:public"])

# =============================================================================
# GCC Toolchain (default)
# =============================================================================

cc_toolchain_config(name = "mango_option_toolchain_config")

cc_toolchain(
    name = "mango_option_cc_toolchain",
    toolchain_identifier = "mango-option-toolchain",
    toolchain_config = ":mango_option_toolchain_config",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 1,
)

toolchain(
    name = "cc_toolchain_for_k8",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    toolchain = ":mango_option_cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

# =============================================================================
# Clang Toolchain (use with --config=clang)
# =============================================================================

clang_toolchain_config(name = "mango_option_clang_toolchain_config")

cc_toolchain(
    name = "mango_option_clang_cc_toolchain",
    toolchain_identifier = "mango-option-clang-toolchain",
    toolchain_config = ":mango_option_clang_toolchain_config",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 1,
)

toolchain(
    name = "cc_toolchain_clang_for_k8",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    toolchain = ":mango_option_clang_cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

# =============================================================================
# Fuzz Toolchain (Clang + libc++, use with earthly +fuzz-test)
# =============================================================================

fuzz_toolchain_config(name = "mango_option_fuzz_toolchain_config")

cc_toolchain(
    name = "mango_option_fuzz_cc_toolchain",
    toolchain_identifier = "mango-option-fuzz-toolchain",
    toolchain_config = ":mango_option_fuzz_toolchain_config",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 1,
)

toolchain(
    name = "cc_toolchain_fuzz_for_k8",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    toolchain = ":mango_option_fuzz_cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

# =============================================================================
# Shared resources
# =============================================================================

filegroup(name = "empty")
