[project]
name = "iv-surface"
version = "0.1.0"
description = "Interactive IV surface visualization using mango-iv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "yfinance>=0.2.48",
    "duckdb>=1.1",
    "plotly>=5.24",
    "jinja2>=3.1",
    "arch>=7.1",
    "numpy>=1.26",
    "pyarrow>=18.0",
    "pandas>=2.2",
    "sse-starlette>=2.0",
]

[project.scripts]
iv-surface = "iv_surface:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iv_surface"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
